<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/f3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/quizLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:contentDescription="@string/a1"
                android:src="@drawable/locked" />

            <TextView
                android:id="@+id/quizLockStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/a3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorGray"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/startQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quizStatus"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/touch"
        android:clickable="true"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/a5"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/quizStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="Please complete Audio and Video sections to get the Key to open Quiz Lock"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />
</RelativeLayout>
